<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home_24"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_nav_search_24"
        android:title="@string/tab_search" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_nav_favorites_24"
        android:title="@string/tab_favorites" />
    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_nav_message_24"
        android:title="@string/tab_message" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile_24"
        android:title="@string/tab_profile" />
</menu>
